polybot-k8s/Yolo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo
  labels:
    app: yolo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yolo
  template:
    metadata:
      labels:
        app: yolo
    spec:
      containers:
        - name: yolo
          image: docker.io/merryshalabi/yolo-dev:34
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: service-yolo
spec:
  selector:
    app: yolo
  ports:
    - protocol: TCP
      port: 80          # Client-facing port
      targetPort: 8081  # Inside container
