polybot-k8s/Yolo/hpa.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo-service
  namespace: polybot-dev
spec:
  selector:
    app: yolo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
